[metadata]
name = LEDSerialExpander
version = 0.2.2
description = Python driver for LED Serial Expander Board
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = Branko Mirkovic
author_email = branko623@gmail.com
url = https://github.com/branko623/LEDSerialExpander
download_urls = https://github.com/branko623/LEDSerialExpander
project_urls = 
	Documentation = https://github.com/branko623/LEDSerialExpander
	Code = https://github.com/branko623/LEDSerialExpander
	Issue tracker = https://github.com/branko623/LEDSerialExpander/issues
classifiers = 
	Development Status :: 1 - Planning
	License :: OSI Approved :: MIT License
	Intended Audience :: Education
	Intended Audience :: Science/Research
	Topic :: Scientific/Engineering
	Topic :: Scientific/Engineering :: Mathematics
	Natural Language :: English
	Operating System :: OS Independent
	Programming Language :: C
	Programming Language :: Cython
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: Implementation :: CPython

[options]
zip_safe = False
python_requires = >=3.4
package_dir = =src
packages = find:

[options.packages.find]
where = src

[options.package_data]
* = *.pxd, *.h
cypack = data/*

[egg_info]
tag_build = 
tag_date = 0

